--- a/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/fragments.html
+++ b/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/fragments.html
@@ -1,9 +1,18 @@
 <!DOCTYPE html>
 <html xmlns :th="http://www.thymeleaf.org">
 
-<head>
-<meta charset = "ISO-8859-1">
-<title>fragments</title>
+<head th:fragment="page_head(title)">
+	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+	<meta name="viewport" content="width=device-width,initial-scale=1.0, minimum-scale=1.0">
+
+	<title>[[${title}]]</title>
+
+	<link rel="stylesheet" type="text/css" th:href="@{/webjars/bootstrap/css/bootstrap.min.css}" />
+	<link rel="stylesheet" type="text/css" th:href="@{/fontawesome/all.css}" />
+	<link rel="stylesheet" type="text/css" th:href="@{/styles.css}" />		
+	<script type="text/javascript" th:src="@{/webjars/jquery/jquery.min.js}" ></script>
+	<script type="text/javascript" th:src="@{/webjars/bootstrap/js/bootstrap.min.js}" ></script>
+	<script type="text/javascript" th:src="@{/js/common.js}" ></script>
 </head>
 
 <body>
@@ -60,6 +69,10 @@
 			th:userId="${user.id}"
 			title="Delete this user"></a>	
 	</div>
+	
+	<div th:fragment="footer" class="text-center m-3">
+		<p>Shopme Control Panel - Copyright &copy; Shopme</p>
+	</div>   
 	
 </body>
 
