--- a/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/index.html
+++ b/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/index.html
@@ -9,6 +9,9 @@
 	
 	<div>
 		<h1>Shopme Control Panel </h1>
+		Welcome  <a th:href="@{/account}" sec:authentication="principal.fullname"></a>
+		&nbsp;
+		<span sec:authentication="principal.authorities"></span>
 	</div>
 	
 	<div th:replace="fragments :: footer"></div>
