--- a/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/login.html
+++ b/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/login.html
@@ -22,7 +22,6 @@
 		<div th:if="${param.error}">
 			<p class="text-danger">[[${session.SPRING_SECURITY_LAST_EXCEPTION.message}]]</p>
 		</div>
-
 		<div th:if="${param.logout}">
 			<p class="text-warning">You have been logged out.</p>
 		</div>
@@ -34,6 +33,9 @@
 			</p>
 			<p>
 				<input type="password" name="password" class="form-control" placeholder="Password" required />
+			</p>
+			<p>
+				<input type="checkbox" name="remember-me" /> &nbsp; Remember Me
 			</p>
 				<input type="submit" values"Login" class="btn btn-primary m-3" />
 		</div>
