--- a/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/navigation.html
+++ b/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/navigation.html
@@ -14,12 +14,14 @@
 		</button>
 		<div class="collapse navbar-collapse" id="topNavbar">
 			<ul class="navbar-nav">
-				<li class="nav-item">
+				<li class="nav-item" sec:authorize="hasAuthority('Admin')">
 					<a class="nav-link" th:href="@{/users}">Users</a>
 				</li>
-				<li class="nav-item">
-					<a class="nav-link" th:href="@{/categories}">Categories</a>
-				</li>		
+				<th:block sec:authorize="hasAnyAuthority('Admin','Editor')">
+					<li class="nav-item">
+						<a class="nav-link" th:href="@{/categories}">Categories</a>
+					</li>		
+				</th:block>
 				<li class="nav-item">
 					<a class="nav-link" th:href="@{/brands}">Brands</a>
 				</li>
@@ -44,11 +46,11 @@
 				<li class="nav-item">
 					<a class="nav-link" th:href="@{/menus}">Menus</a>
 				</li>
-				<li class="nav-item">
+				<li class="nav-item" sec:authorize="hasAuthority('Admin')">
 					<a class="nav-link" th:href="@{/settings}">Settings</a>
 				</li>		
 				<li>
-					<span class="fas fa-user fa-2x icon-silver"></span>
+					<span class="fas fa-user fa-2x icon-white"></span>
 				</li>
 				<li class="nav-item dropdown">
 					<a class="nav-link dropdown-toggle" data-toggle="dropdown"
