--- a/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/users/account_form.html
+++ b/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/users/account_form.html
@@ -45,7 +45,7 @@
 			<div class="col-sm-8">
 				<input type="password" th:field="*{password}" class="form-control"
 					placeholder="leave blank if you don't want to change password"
-					minlength="8" maxlength="20"
+					minlength="4" maxlength="20"
 					oninput="checkPasswordMatch(document.getElementById('confirmPassword'))"
 				  />
 			</div>
@@ -54,7 +54,7 @@
 			<label class="col-sm-4 col-form-label">Confirm Password:</label>
 			<div class="col-sm-8">
 				<input type="password" id="confirmPassword" class="form-control"
-					minlength="8" maxlength="20"
+					minlength="4" maxlength="20"
 					oninput="checkPasswordMatch(this)"			
 				  />
 			</div>
@@ -108,35 +108,6 @@
 
 </div>
 <script type="text/javascript">
-	$(document).ready(function() {
-		$("#buttonCancel").on("click", function() {
-			window.location = "[[@{/users}]]";
-		});
-
-		$("#fileImage").change(function() {
-			fileSize = this.files[0].size;
-
-			if (fileSize > 1048576) {
-				this.setCustomValidity("You must choose an image less than 1MB!");
-				this.reportValidity();
-			} else {
-				this.setCustomValidity("");
-				showImageThumbnail(this);				
-			}
-
-		});
-	});
-
-	function showImageThumbnail(fileInput) {
-		var file = fileInput.files[0];
-		var reader = new FileReader();
-		reader.onload = function(e) {
-			$("#thumbnail").attr("src", e.target.result);
-		};
-
-		reader.readAsDataURL(file);
-	}
-
 	function checkPasswordMatch(confirmPassword) {
 		if (confirmPassword.value != $("#password").val()) {
 			confirmPassword.setCustomValidity("Passwords do not match!");
@@ -144,7 +115,7 @@
 			confirmPassword.setCustomValidity("");
 		}
 	}
-
 </script>
+<script th:src="{/js/common_form.js}"></script>
 </body>
 </html> 
