--- a/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/users/users.html
+++ b/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/users/users.html
@@ -1,81 +1,11 @@
 <!DOCTYPE html>
 <html>
-<head xmlns :th="http://www.thymeleaf.org">
-	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
-	 	
-	<title>Home - Shopme Admin </title>
-	
-	<link rel="stylesheet" type="text/css" th:href="@{/webjars/bootstrap/css/bootstrap.min.css}"/>
-	<link rel="stylesheet" type="text/css" th:href="@{/fontawesome/all.css}" />
-		<link rel="stylesheet" type="text/css" th:href="@{/style.css}" />
-	
-	<script type="text/javascript" th:src="@{/webjars/jquery/jquery.min.js}" ></script>
-	<script type="text/javascript" th:src="@{/webjars/bootstrap/js/bootstrap.min.js}" ></script>
-	
-</head>
+<head th:replace="fragments :: page_head('Users - Shopme Admin')" />
 <body>
 <div class="container-fluid">
 	
-	<div>
-		<nav class="navbar navbar-expand-Lg bg-dark navbar-dark">
-			<a class="navbar-brand" th:href="@{/}">
-				<img th:src="@{/images/ShopmeAdminSmall.png}" />
-			</a>	
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#topNavbar">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-			
-			<div class="collapse navbar-collapse" id="topNavbar">
-				<ul class="navbar-nav">	
-					<li class="nav-item">
-						<a class="nav-link" th:href="@{/users}"> Users </a>
-					</li>
-					
-					<li class="nav-item">
-						<a class="nav-link" th:href="@{/categories}"> Categories </a>
-					</li>
-					
-					<li class="nav-item">
-						<a class="nav-link" th:href="@{/brands}"> Brands </a>
-					</li>
-					
-					<li class="nav-item">
-						<a class="nav-link" th:href="@{/products}"> Products </a>
-					</li>
-					
-					<li class="nav-item">
-						<a class="nav-link" th:href="@{/customers}"> Customers </a>
-					</li>
-					
-					<li class="nav-item">
-						<a class="nav-link" th:href="@{/shipping}"> Shipping </a>
-					</li>
-					
-					<li class="nav-item">
-						<a class="nav-link" th:href="@{/orders}"> Orders </a>
-					</li>
-					
-					<li class="nav-item">
-						<a class="nav-link" th:href="@{/report}"> Sales Report </a>
-					</li>
-					
-					 <li class="nav-item">
-                    	<a class="nav-link" th:href="@{/articles}">Articles</a>
-                	</li>
-                	
-					 <li class="nav-item">
-                   		 <a class="nav-link" th:href="@{/menus}">Menus</a>
-                	</li>
-                	
-					 <li class="nav-item" sec:authorize="hasAuthority('Admin')">
-                    	<a class="nav-link" th:href="@{/settings}">Settings</a>
-               		 </li>
-				</ul>
-			</div>
+	<div th:replace="navigation :: menu"></div>
 
-		</nav>
-	</div>
 
 <!-- 
 		<a th:href="@{/users/new}" class="fa-solid fa-user-plus fa-2x icon-dark"></a>	
@@ -178,24 +108,10 @@
 				
 			</table>
 	</div>
-	
-	<div class="less-details">
-			<div th:each="user : ${listUsers}" class="row m-1">
-				<div class="col-4">
-					<div th:replace="fragments :: user_photos" />			
-				</div>
-				<div class="col-8">
-					<div></div>
-					<div>[[${user.roles}]]</div>
-					<div class="mt-2">
-						<div th:replace="fragments :: user_status" />
-						&nbsp; 			
-						<div th:replace="fragments :: user_actions" />
-					</div>
-				</div>
-				<div>&nbsp;</div>
-			</div>
-		</div>
+
+<!--
+
+-->	
 	
 	<div class="text-center m-1" th:if="${totalItems > 0}")>
 		<span>Showing User # [[${startCount}]] to [[${endCount}]] of [[${totalItems}]]</span>
@@ -273,8 +189,7 @@
 	
 	function clearFilter(){
 		window.location="[[@{/users}]]";
-	}
-	
+	}S
 	
 </script>
 </body>
