--- a/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/fragments.html
+++ b/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/fragments.html
@@ -41,7 +41,7 @@
 			[[${label}]]
 	</a>
 	
-
+	<!-- USER -->
 	<div th:fragment="user_photos" th:remove="tag">
 		<span th:if="${user.photos == null}" class="fas fa-portrait fa-3x icon-silver"></span>
 		<img th:if="${user.photos != null}" th:src="@{${user.photosImagePath}}"
@@ -69,6 +69,33 @@
 			th:userId="${user.id}"
 			title="Delete this user"></a>	
 	</div>
+	<!-- USER END -->
+	
+	
+		<!-- CATEGORY -->
+		<div th:fragment="categories_status" th:remove="tag">
+			<a th:if="${categories.enabled == true}" class="fas fa-check-circle fa-2x icon-green" 
+				th:href="@{'/categories/' + ${categories.id} + '/enabled/false'}"
+				title="Disable this category"
+				></a>
+	
+			<a th:if="${categories.enabled == false}" class="fas fa-circle fa-2x icon-dark" 
+				th:href="@{'/categories/' + ${categories.id} + '/enabled/true'}"
+				title="Enable this category"
+				></a>	
+		</div>
+
+		<div th:fragment="categories_actions" th:remove="tag">
+			<a class="fas fa-edit fa-2x icon-green" th:href="@{'/categories/edit/' + ${categories.id}}"
+				title="Edit this category"></a>
+			&nbsp; 
+			<a class="fas fa-trash fa-2x icon-red link-delete" 
+				th:href="@{'/categories/delete/' + ${categories.id}}"
+				th:categoriesId="${categories.id}"
+				title="Delete this category"></a>		
+		</div>
+		<!-- CATEGORY END -->
+	
 	
 	<div th:fragment="footer" class="text-center m-3">
 		<p>Shopme Control Panel - Copyright &copy; Shopme</p>
