--- a/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/fragments.html
+++ b/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/fragments.html
@@ -17,15 +17,16 @@
 
 <body>
 
-
-	<th th:fragment="column_link(fieldName, columnLabel, removeTag)" th:remove="${removeTag}">
+	<th th:fragment="column_link(moduleURL, fieldName, columnLabel, removeTag)" th:remove="${removeTag}">
+		<!-- 
 		<a th:if="${sortField !=  fieldName}" class="text-white" 
-			th:href="@{'/users/page/' + ${currentPage} + '?sortField=' + ${fieldName} + '&sortDir=' +${sortDir} 
+			th:href="@{${moduleURL} + '/page/' + ${currentPage} + '?sortField=' + ${fieldName} + '&sortDir=' +${sortDir} 
 			+ ${keyword != null ? '&keyword=' + keyword : ''}}">
 						[[${columnLabel}]]
 		</a>
-		<a th:if="${sortField ==  fieldName}" class="text-white"
-			th:href="@{'/users/page/' + ${currentPage} + '?sortField=' + ${fieldName} + '&sortDir=' + ${reverseSortDirString}
+		-->
+		<a class="text-white"
+			th:href="@{${moduleURL} + '/page/' + ${currentPage} + '?sortField=' + ${fieldName} + '&sortDir=' + ${reverseSortDirString}
 			+ ${keyword != null ? '&keyword=' + keyword : ''} }">
 						[[${columnLabel}]]
 		</a>
@@ -35,8 +36,8 @@
 		</span>
 	</th>
 	
-	<a th:fragment="page_link(pageNum,label)" class="page-link" 
-	th:href="@{'/users/page/' + ${pageNum} + '?sortField=' + ${sortField} + '&sortDir=' +${sortDir} 
+	<a th:fragment="page_link(moduleURL,pageNum,label)" class="page-link" 
+	th:href="@{${moduleURL} + '/page/' + ${pageNum} + '?sortField=' + ${sortField} + '&sortDir=' +${sortDir} 
 	+ ${keyword != null ? '&keyword=' + keyword : ''} } ">
 			[[${label}]]
 	</a>
@@ -96,6 +97,93 @@
 		</div>
 		<!-- CATEGORY END -->
 	
+	<!-- REFACTOR -->
+		<div th:fragment="status(enabled, entityName, entityURL)" th:remove="tag">
+			<a th:if="${enabled == true}" class="fas fa-check-circle fa-2x icon-green" style="text-decoration: none;" 
+				th:href="@{${entityURL} + '/enabled/false'}"
+				th:title="'Disable this' + ${entityName}"  
+				></a>
+	
+			<a th:if="${enabled == false}" class="fas fa-circle fa-2x icon-dark" style="text-decoration: none;" 
+				th:href="@{${entityURL} + '/enabled/true'}"
+				title="'Enabled this' + ${entityName}"
+				></a>	
+		</div>
+		
+		<div th:fragment="edit(entityName, editURL)" th:remove="tag">
+			<a class="fas fa-edit fa-2x icon-green" 
+				th:href="@{${editURL}}"
+				title="'Edit this ' + ${entityName} "></a>	
+		</div>
+		
+		<div th:fragment="delete(entityName, deleteURL, visible)" th:remove="tag">
+		&nbsp;
+		<th:block th:if="${visible}">
+			<a class="fas fa-trash fa-2x icon-red link-delete" 
+				th:href="@{${deleteURL}}"
+				th:entityId="${entityName.id}"
+				title="'Delete this ' + ${entityName} "></a>	
+		</th:block>
+			
+		</div>
+	<!-- REFACTOR END -->
+
+	<!-- PAGINATION -->
+	<div th:fragment="pagination(moduleURL, entityName)" th:remove="tag">
+		<div class="text-center m-1" th:if="${totalItems > 0}")>
+			<span>Showing [[${entityName}]] # [[${startCount}]] to [[${endCount}]] of [[${totalItems}]]</span>
+		</div>
+		<div class="text-center m-1 " th:unless="${totalItems > 0} " >
+			<span>No [[${entityName}]] Found</span>
+		</div>
+	
+		<div th:if="${totalPages > 1}")>
+			<nav>
+			  <ul class="pagination justify-content-center flex-wrap">
+			    <li th:class="${currentPage > 1 ? 'page-item' : 'page-item disabled'}">
+			    	<a th:replace="fragments :: page_link(${moduleURL}, 1, 'First')"></a>
+			    </li>		  
+			    <li th:class="${currentPage > 1 ? 'page-item' : 'page-item disabled'}">
+			    	<a th:replace="fragments :: page_link(${moduleURL}, ${currentPage - 1}, 'Previous')"></a>
+			    </li>
+	
+			    <li th:class="${currentPage != i ? 'page-item': 'page-item active'}" 
+			    	th:each="i : ${#numbers.sequence(1, totalPages)}">
+			    	<a th:replace="fragments :: page_link(${moduleURL}, ${i}, ${i})"></a>
+			    </li>
+	
+			    <li th:class="${currentPage < totalPages ? 'page-item' : 'page-item disabled'}">
+			    	<a th:replace="fragments :: page_link(${moduleURL}, ${currentPage + 1}, 'Next')"></a>
+			    </li>
+	
+			    <li th:class="${currentPage < totalPages ? 'page-item' : 'page-item disabled'}">
+			    	<a th:replace="fragments :: page_link(${moduleURL}, ${totalPages}, 'Last')"></a>
+			    </li>		    
+			  </ul>
+			</nav>
+		</div>
+	</div>
+	<!-- PAGINATION END-->
+
+	<!-- SEARCH FORM -->
+	<div th:fragment="search_form(moduleURL)">
+		<form th:action="@{${moduleURL}}" class="form-inline m-3">
+			<input type="hidden" name="sortField" th:value="${sortField}" />
+			<input type="hidden" name="sortDir" th:value="${sortDir}" />
+
+			Filter:&nbsp;
+			<input type="search" name="keyword" th:value="${keyword}" class="form-control" required/>
+			&nbsp;&nbsp;
+			<button type="submit" class="btn btn-primary">
+				<i class="fas fa-search"></i>
+			</button>
+			&nbsp;&nbsp;
+			<button type="button" class="btn btn-secondary" onclick="clearFilter()">
+				<i class="fas fa-eraser"></i>
+			</button>
+		</form>
+	</div>	
+	<!-- SEARCH FORM END-->
 	
 	<div th:fragment="footer" class="text-center m-3">
 		<p>Shopme Control Panel - Copyright &copy; Shopme</p>
