--- a/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/users/users.html
+++ b/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/users/users.html
@@ -39,113 +39,81 @@
 		[[${message}]]
 	</div>
 	
-	<div>
-		<form th:action="@{/users/page/1}" class="form-inline m-3">
-			Filter : &nbsp;
-			<input type="hidden" name="sortField" th:value="${sortField}"/>
-			<input type="hidden" name="sortDir" th:value="${sortDir}"/>
-			<input type="search" name="keyword" th:value="${keyword}" class="form-control" required/>
-			&nbsp;&nbsp;
-			<button type="submit" value="Search" class="btn btn-primary">
-				<i class="fa-solid fa-magnifying-glass"></i> 
-			</button>
-			&nbsp;&nbsp;
-			<button type="button" value="Clear" class="btn btn-secondary" onclick="clearFilter()">
-				<i class="fa-regular fa-circle-xmark"></i>
-			</button>
-		</form>
-	</div>
+	<div th:replace="fragments :: search_form('/users/page/1')" >	</div>
 	
 	<div class="full-details">
 			<table class="table table-bordered table-hover table-striped table-responsive-xL">
 				<thead class ="thead-dark">
 					<tr>
 						<th class="hideable-column">
-							<th th:replace="fragments :: column_link('id', 'User ID', 'tag')" />
+							<th th:replace="fragments :: column_link('/users','id', 'User ID', 'tag')" />
 						</th>
 						<th>
 							Photos
 						</th>
 						
 						<th class="hideable-column">
-							<th th:replace="fragments :: column_link('email', 'E-mail', 'tag')" />
+							<th th:replace="fragments :: column_link('/users','email', 'E-mail', 'tag')" />
 						</th>					
 	
-						<th th:replace="fragments :: column_link('firstName', 'First Name', 'none')" />
-						<th th:replace="fragments :: column_link('lastName', 'Last Name', 'none')" />	
+						<th th:replace="fragments :: column_link('/users','firstName', 'First Name', 'none')" />
+						<th th:replace="fragments :: column_link('/users','lastName', 'Last Name', 'none')" />	
 						
 						<th>
 							Roles
 						</th>
 						
-						<th th:replace="fragments :: column_link('enabled', 'Enabled', 'none')" />						
+						<th th:replace="fragments :: column_link('/users','enabled', 'Enabled', 'none')" />						
 						<th>  </th>
 	
 					</tr>
 	
 				</thead>
 				<tbody>
-						<tr th:each="user : ${listUsers}">
-							<td class="hideable-column">[[${user.id}]]</td>
-							<td>
-								<span th:if="${user.photos == null}" class="fa-solid fa-image-portrait fa-5x icon-silver"></span>
-								<img th:if="${user.photos != null}" th:src="@{${user.photosImagePath}}" style="width:100px" th:align="center"/>
-							</td>
-							<td class="hideable-column">[[${user.email}]]</td>
-							<td>[[${user.firstName}]]</td>
-							<td>[[${user.lastName}]]</td>
-							<td>[[${user.roles} ]]</td>
-							
-							<td>
-								<div th:replace="fragments :: user_status" />
-							</td>
-							
-							<td>
-								<div th:replace="fragments :: user_actions" />
-							</td>
-						</tr>
+					<tr th:each="user : ${listUsers}">
+						<td class="hideable-column">[[${user.id}]]</td>
+						<td>
+							<span th:if="${user.photos == null}" class="fa-solid fa-image-portrait fa-5x icon-silver"></span>
+							<img th:if="${user.photos != null}" th:src="@{${user.photosImagePath}}" style="width:100px" th:align="center"/>
+						</td>
+						<td class="hideable-column">[[${user.email}]]</td>
+						<td>[[${user.firstName}]]</td>
+						<td>[[${user.lastName}]]</td>
+						<td>[[${user.roles} ]]</td>
+						
+						<td>
+							<div th:replace="fragments :: status(${user.enabled}, 'user', '/users/' + ${user.id})" />
+						</td>
+						
+						<td>
+							<div th:replace="fragments :: edit('user', '/users/edit/' + ${user.id})" />
+							<div th:replace="fragments :: delete('user', '/users/delete/' + ${user.id}, true)" />
+						</td>
+					</tr>
 				</tbody>
 				
 			</table>
 	</div>
-
-<!--
-
--->	
 	
-	<div class="text-center m-1" th:if="${totalItems > 0}")>
-		<span>Showing User # [[${startCount}]] to [[${endCount}]] of [[${totalItems}]]</span>
+	<div class="less-details">
+		<div th:each="user : ${listUsers}" class="row m-1">
+			<div class="col-4">
+				<div th:replace="fragments :: user_photos" />			
+			</div>
+			<div class="col-8">
+				<div>[[${user.fullName}]]</div>
+				<div>[[${user.roles}]]</div>
+				<div class="mt-2">
+					<div th:replace="fragments :: user_status" />
+					&nbsp; 			
+					<div th:replace="fragments :: user_actions" />
+				</div>
+			</div>
+			<div>&nbsp;</div>
+		</div>
 	</div>
-	<div class="text-center m-1 " th:unless="${totalItems > 0} " >
-		<span>No User Found</span>
-	</div>
-
-	<div th:if="${totalPages > 1}")>
-		<nav>
-		  <ul class="pagination justify-content-center flex-wrap">
-		   <li th:class="${currentPage > 1 ? 'page-item' : 'page-item disabled'}">
-		   		<a th:replace="fragments :: page_link(1, 'First')" >   </a>
-		   </li>
-		    <li th:class="${currentPage > 1 ? 'page-item' : 'page-item disabled'}" >
-		      <a th:replace="fragments :: page_link(${currentPage - 1}, 'Previous')" >   </a>
-		    </li>
-		    
-		   <li th:class="${currentPage != i ? 'page-item' : 'page-item active'}" 
-		   		th:each="i : ${#numbers.sequence(1, totalPages)}">
-		        <a th:replace="fragments :: page_link(${i} , ${i})" >   </a>
-		    </li>
-
-		     <li th:class="${currentPage < totalPages ? 'page-item' : 'page-item disabled'}" >
-		    	   <a th:replace="fragments :: page_link(${currentPage + 1}, 'Next')" >   </a>
-		    </li>
-		    
-		     <li class="page-item">
-		      	 <a th:replace="fragments :: page_link(${totalPages}, 'Last')" >   </a>
-		    </li>
-		    
-		  </ul>
-		</nav>
-	</div>
+	
+	<div th:replace="fragments :: pagination('/users', 'users')"></div>
 
 	<div class="modal fade text-center" id="confirmModal">
 		<div class="modal-dialog">
