--- a/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/Brand/brand_form.html
+++ b/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/Brand/brand_form.html
@@ -15,7 +15,7 @@
 	</div>
 	
 	<form th:action="@{/brands/save}" method="post" style="max-width: 550px; margin: 0 auto"
-	enctype="multipart/form-data"
+	enctype="multipart/form-data" onsubmit="checkUnique(this)"
 	th:object="${brand}">
 		<input type="hidden" th:field="*{id}"/>
 	
@@ -43,9 +43,7 @@
 				<label class="col-sm-4 col-form-label">Select One or More Categories : </label>
 				<div class="col-sm-8">
 					<select class="form-control" th:field="*{categories}" multiple required
-					style="resize: vertical; height: 200px">
-						<option value="0">No Option</option>
-						
+					style="resize: vertical; height: 200px">						
 						<th:block th:each="cat : ${listCategories}">
 							<option th:value="${cat.id}">[[${cat.name}]]</option>
 						</th:block>
@@ -86,33 +84,31 @@
 		$("#modalDialog").modal();
 	}
 	
-	function checkUnique(form){
-		catId = $('#id').val();
-		catName = $('#name').val();
-		catAlias = $('#alias').val();
-		
-		csrfValue = $("input[name= '_csrf']").val();
-		
-		url = "[[@{/brands/check_unique}]]"
-		params = {id: catId, name: catName, alias: catAlias, _csrf: csrfValue};
-		
-		$.post(url, params, function(response){
-			<!-- alert(response); -->
-			if(response == "OK"){
+	function checkUnique(form) {
+		brandId = $("#id").val();
+		brandName = $("#name").val();
+
+		csrfValue = $("input[name='_csrf']").val();
+
+		url = "[[@{/brands/check_unique}]]";
+
+		params = {id: brandId, name: brandName, _csrf: csrfValue};
+
+		$.post(url, params, function(response) {
+			if (response == "OK") {
 				form.submit();
-			}else if(response == "DuplicateName"){
-				showWarningModal("There is another brand having same name " + catName);
-			}else if(response == "DuplicateAlias"){
-				showWarningModal("There is another brand having same Alias " + catAlias);
-			}else{
-				showWarningModal("Unknown response from server");
+			} else if (response == "Duplicate") {
+				showWarningModal("There is another brand having same name " + brandName);	
+			} else {
+				showErrorModal("Unknown response from server");
 			}
-		}).fail(function(){
-			showErrorModal("Could not connect from server");
-		})
-		
+
+		}).fail(function() {
+			showErrorModal("Could not connect to the server");
+		});
+
 		return false;
-	}
+	}	
 	
 	$(document).ready(function() {
 		dropdownCategories = $("#categories");
