--- a/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/Product/products_details.html
+++ b/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/Product/products_details.html
@@ -3,11 +3,29 @@
 <body>
 	
 <div th:fragment="content" id="divProductDetails">
-	<div class="form-inline" id="divDetail0">
-		<label>Name : </label>
+	<th:block th:each="detail, status : ${product.details}">
+		<div class="form-inline" th:id="@{'divDetail' + ${status.index}}">
+		    <input type="hidden" name="detailIDs" th:value="${detail.id}" />
+		    
+			<label class="m-3">Name : </label>
+				<input type="text" th:value="${detail.name}" class="form-control w-25" name="detailNames"maxlength="255" />
+			<label class="m-3">Value : </label>
+				<input type="text" th:value="${detail.value}" class="form-control w-25" name="detailValues"maxlength="255" />
+				
+			<a class="btn fas fa-times-circle fa-2x icon-red float-right"
+			name="linkRemoveDetail"
+			title="Remove this image"></a>
+		</div>
+	</th:block>
+	
+	<div class="form-inline" th:id="divDetail + ${#lists.size(product.details)}">
+	    <input type="hidden" name="detailIDs" value="0" />
+		<label class="m-3">Name : </label>
 			<input type="text" class="form-control w-25" name="detailNames"maxlength="255"/>
-		<label>Value : </label>
-			<input type="text" class="form-control w-25" name="detailvalues"maxlength="255"/>
+		<label class="m-3">Value : </label>
+			<input type="text" class="form-control w-25" name="detailValues"maxlength="255"/>
 	</div>
+</div>
+
 </body>
 </html>
