--- a/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/Product/products_form.html
+++ b/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/Product/products_form.html
@@ -49,19 +49,39 @@
 			  		<div th:replace="Product/products_overview :: content"> </div>
 			  </div>
 			  <div class="tab-pane" id="description" role="tabpanel" >
-			  		<div th:replace="Product/products_description :: content"> </div>
+			  		<th:block sec:authorize="hasAnyAuthority('Salesperson')">
+						<div th:replace="Product/products_description_readonly :: content"> </div>
+			  		</th:block>
+			  		<th:block sec:authorize="hasAnyAuthority('Admin', 'Editor')">
+			  			<div th:replace="Product/products_description :: content"> </div>
+			  		</th:block>
 			  </div>
 			  <div class="tab-pane" id="images" role="tabpanel">
-					<div th:replace="Product/products_images :: content"> </div>
+					<th:block sec:authorize="hasAnyAuthority('Salesperson')">
+				  		<div th:replace="Product/products_images_readonly :: content"> </div>
+			  		</th:block>
+			  		<th:block sec:authorize="hasAnyAuthority('Admin', 'Editor')">
+						<div th:replace="Product/products_images :: content"> </div>
+			  		</th:block>
 			  </div>
 			  <div class="tab-pane p-3" id="details" role="tabpanel">
-				  	<div th:replace="Product/products_details :: content"> </div>
-				  	<div>
-		 			  	<input type="button" value="Add More Detail" class="btn btn-secondary" onclick="addDetailNextSection()"/>
-				  	</div>
+				  	<th:block sec:authorize="hasAnyAuthority('Salesperson')">
+					  	<div th:replace="Product/products_details_readonly :: content"> </div>
+			  		</th:block>
+			  		<th:block sec:authorize="hasAnyAuthority('Admin', 'Editor')">
+					  	<div th:replace="Product/products_details :: content"> </div>
+					  	<div>
+			 			  	<input type="button" value="Add More Detail" class="btn btn-secondary" onclick="addDetailNextSection()"/>
+					  	</div>
+			  		</th:block>
 			  </div>
 			  <div class="tab-pane" id="shipping" role="tabpanel">
-					<div th:replace="Product/products_shipping :: content"> </div>
+					<th:block sec:authorize="hasAnyAuthority('Salesperson')">
+				  		<div th:replace="Product/products_shipping_readonly :: content"> </div>
+			  		</th:block>
+			  		<th:block sec:authorize="hasAnyAuthority('Admin', 'Editor')">
+						<div th:replace="Product/products_shipping :: content"> </div>
+			  		</th:block>
 			  </div>
 			</div>
 		</div>
