--- a/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/navigation.html
+++ b/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/navigation.html
@@ -14,17 +14,32 @@
 		</button>
 		<div class="collapse navbar-collapse" id="topNavbar">
 			<ul class="navbar-nav">
-				<li class="nav-item" sec:authorize="hasAuthority('Admin')">
-					<a class="nav-link" th:href="@{/users}">Users</a>
-				</li>
+				<li class="nav-item dropdown" sec:authorize="hasAuthority('Admin')">
+					<a class="nav-link dropdown-toggle" data-toggle="dropdown"
+					    th:href="@{/users}">Users</a>
+					<div class="dropdown-menu">
+						<a class="dropdown-item" th:href="@{/users/new}">Create New Users</a>
+						<a class="dropdown-item" th:href="@{/users}">View Users</a>
+					</div>
+				</li>		
 				<th:block sec:authorize="hasAnyAuthority('Admin', 'Editor')">
-					<li class="nav-item">
-						<a class="nav-link" th:href="@{/categories}">Categories</a>
+					<li class="nav-item dropdown">
+						<a class="nav-link dropdown-toggle" data-toggle="dropdown"
+						th:href="@{/categories}">Categories</a>
+						<div class="dropdown-menu">
+							<a class="dropdown-item" th:href="@{/categories/new}">Create New</a>
+							<a class="dropdown-item" th:href="@{/categories}">View All</a>
+						</div>
 					</li>	
 
-					<li class="nav-item">
-						<a class="nav-link" th:href="@{/brands}">Brands</a>
-					</li>
+					<li class="nav-item dropdown">
+						<a class="nav-link dropdown-toggle" data-toggle="dropdown"
+						th:href="@{/brands}">Brands</a>
+						<div class="dropdown-menu">
+							<a class="dropdown-item" th:href="@{/brands/new}">Create New</a>
+							<a class="dropdown-item" th:href="@{/brands}">View All</a>
+						</div>
+					</li>	
 				</th:block>	
 
 				<th:block sec:authorize="hasAnyAuthority('Admin', 'Salesperson', 'Editor', 'Shipper')">
