--- a/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/navigation.html
+++ b/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/navigation.html
@@ -42,10 +42,16 @@
 					</li>	
 				</th:block>	
 
-				<th:block sec:authorize="hasAnyAuthority('Admin', 'Salesperson', 'Editor', 'Shipper')">
-					<li class="nav-item">
-						<a class="nav-link" th:href="@{/products}">Products</a>
-					</li>
+				<th:block sec:authorize="hasAnyAuthority('Admin', 'Salesperson', 'Editor', 'Shipper')">					
+					<li class="nav-item dropdown">
+						<a class="nav-link dropdown-toggle" data-toggle="dropdown"
+						th:href="@{/brands}">Products</a>
+						<div class="dropdown-menu">
+							<a class="dropdown-item" th:href="@{/products/new}" 
+							sec:authorize="hasAnyAuthority('Admin', 'Editor')">Create New</a>
+							<a class="dropdown-item" th:href="@{/products}">View All</a>
+						</div>
+					</li>	
 				</th:block>
 
 				<th:block sec:authorize="hasAnyAuthority('Admin', 'Salesperson')">
