--- a/ShopmeWebParent/ShopmeFrontEnd/src/main/resources/templates/index.html
+++ b/ShopmeWebParent/ShopmeFrontEnd/src/main/resources/templates/index.html
@@ -1,11 +1,27 @@
 <!DOCTYPE html>
-<html>
-<head>
-<meta charset ="ISO-8859-1">
-<title>Welcome To Shopme</title>
-</head>
+<html xmlns:th="http://www.thymeleaf.org">
+<head th:replace="fragments :: page_head('Shopme', 'none')" />
 <body>
-<h1>Welcome to Shopme eCommerce </h1>
+	<div class="container-fluid">
+		<div th:replace="navigation :: header_menu"></div>
+		<div>
+			<h1>Shopping by Categories</h1>
+		</div>
+		
+		<div class="row">
+			<div class-"col" th:each="cat : ${listCategories}">
+				<div> <img th:src="@{${cat.imagePath}}" width="50"/> </div>	
+				<div>
+					<a>[[${cat.name}]]</a>
+					
+				</div>
+							
+			</div>
+		</div>
+
+		<div th:replace="navigation :: footer_menu"></div>
+	</div>
 </body>
+</html>
 
 </html>
