--- a/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/Product/products_overview.html
+++ b/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/Product/products_overview.html
@@ -43,24 +43,25 @@
 		<div class="col-sm-10">
 			<th:block sec:authorize="hasAnyAuthority('Admin', 'Editor')">
 				<th:block th:if="${product.category != null}">
+				<select th:field="*{category}" class="form-control" required>
+					<th:block th:each="cat : ${product.brand.categories}">
+						<option th:value="${cat.id}">[[${cat.name}]]</option>
+					</th:block>
+				</select>			
+				</th:block>
+				
+				<th:block th:if="${product.category == null}">
 					<select th:field="*{category}" class="form-control" required>
-						<th:block th:each="cat : ${product.brand.categories}">
-							<option th:value="${cat.id}">[[${cat.name}]]</option>
-						</th:block>
+		
 					</select>
 				</th:block>
-			
-			
-				<th:block th:if="${product.category==NULL}">
-					<select th:field="*{category}" class="form-control" required>
-						
-					</select>
-				</th:block>
-			</th:block>
-			
-			<th:block sec:authorize="hasAnyAuthority('Salesperson')">
+				
+		    </th:block>
+		    
+		    <th:block sec:authorize="hasAuthority('Salesperson')">
 				<input type="text" class="form-control" th:value="${product.category.name}" readonly />
 			</th:block>
+			
 		</div>
 	</div>
 
