--- a/ShopmeWebParent/ShopmeFrontEnd/src/main/resources/templates/product/product_by_category.html
+++ b/ShopmeWebParent/ShopmeFrontEnd/src/main/resources/templates/product/product_by_category.html
@@ -5,40 +5,26 @@
 <div class="container-fluid">
 	<div th:replace="navigation :: header_menu"></div>
 
+	<div th:replace="navigation :: search_nav"></div>
 	<div th:replace="breadcrumb :: content"></div>
 
 	<div class="row text-center">
 		<th:block th:each="cat : ${category.children}">
-		<div class="col" th:if="${cat.enabled == true}">
-		<a th:href="@{'/c/' + ${cat.alias}}">
-			<img th:src="@{${cat.imagePath}}" height="100" />
-			<br/>
-			<b>[[${cat.name}]]</b>
-		</a>
-		</div>
+			<div class="col" th:if="${cat.enabled == true}">
+				<a th:href="@{'/c/' + ${cat.alias}}">
+					<img th:src="@{${cat.imagePath}}" height="100" />
+					<br/>
+					<b>[[${cat.name}]]</b>
+				</a>
+			</div>
 		</th:block>
 	</div>
 
 	<div class="row">&nbsp;</div>
+	
 	<div class="row">
 		<th:block th:each="product : ${listProducts}">
-		<div class="col">
-			<div>
-				<a th:href="@{'/p/' + ${product.alias}}">
-					<img th:src="@{${product.mainImagePath}}" width="150" />
-					<br/>
-					<b>[[${product.shortName}]]</b>
-				</a>
-			</div>
-			<div th:if="${product.discountPercent <= 0}">
-				<span>$ [[${product.price}]]</span>
-			</div>
-			<div th:if="${product.discountPercent > 0}">
-				<span style="font-size: larger; color: darkred">$ [[${product.discountPrice}]]</span>
-				<del><span>$ [[${product.price}]]</span></del>
-			</div>
-
-		</div>
+			<div th:replace="product/product_fragment :: content"></div>
 		</th:block>
 	</div>
 
